--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -64,7 +64,7 @@ html.dark .canvas-wrapper {
 html.light .canvas-wrapper {
   background-color: white;
 }
-@media screen and (desktopMin) {
+@media screen and (min-width: 1024px) {
   html ::-webkit-scrollbar {
     width: 0.520833vw;
   }
